Revert "Update config.json"
This reverts commit 90f7faa6a6570be53bee112dea892eb066b6c813.

--- a/data/config.json
+++ b/data/config.json
@@ -38,17 +38,17 @@
     }
   },
   "domain": {
-    "useCustomDomain": false,
+    "useCustomDomain": true,
     "domainName": "dsi.sault.fr",
-    "useSSL": false,
-    "sslMethod": "",
+    "useSSL": true,
+    "sslMethod": "selfSigned",
     "letsencryptEmail": "",
-    "port": 3005,
-    "accessMode": "localhost",
-    "securityMode": "none",
+    "port": 443,
+    "accessMode": "domain",
+    "securityMode": "selfSigned",
     "selfSignedCommonName": "dsi.sault.fr",
     "selfSignedOrganization": "Sault",
-    "sslCertPath": "",
-    "sslKeyPath": ""
+    "sslCertPath": "ssl/dsi.sault.fr.crt",
+    "sslKeyPath": "ssl/dsi.sault.fr.key"
   }
 }
