Reapply "Update config.json"
This reverts commit 0e28943c4c6308e364d1120476551e40519cba63.

--- a/data/config.json
+++ b/data/config.json
@@ -44,8 +44,8 @@
     "sslMethod": "",
     "letsencryptEmail": "",
     "port": 443,
-    "accessMode": "localhost",
-    "securityMode": "none",
+    "accessMode": "domain",
+    "securityMode": "selfSigned",
     "selfSignedCommonName": "dsi.sault.fr",
     "selfSignedOrganization": "Sault",
     "sslCertPath": "",
